--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -28,8 +28,8 @@
                     <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12">
                             <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                                <p>le document de convention n'est pas encore soumis à l'instruction{% if user.is_bailleur %},
-                                    pour finaliser votre demande de conventionnement, vous devez clicker sur le bouton
+                                <p>Le document de convention n'est pas encore soumis à l'instruction{% if user.is_bailleur %},
+                                    pour finaliser votre demande de conventionnement, vous devez cliquer sur le bouton
                                     <b>"Soumettre au service instructeur"</b> en bas de page{% endif %}</p>
                             </div>
                         </div>
