update: add adress for the administration

--- a/templates/emails/bailleur_valide.html
+++ b/templates/emails/bailleur_valide.html
@@ -10,6 +10,8 @@
     <li>Signer à la fin de la convention. Attention à ne pas dater.</li>
 </ul>
 
+<p>Vous pourrez ensuite transmettre les 3 exemplaire signés à votre service instructeur à l'adresse suivante : {{ administration.adresse }} {{ administration.code_postal }} {{ administration.ville }}.</p>
+
 <p>N'hésitez pas à nous faire part de tout retour ou suggestion d'amélioration sur la plateforme à l'adresse email <a href="mailto:contact@apilos.beta.gouv.fr">contact@apilos.beta.gouv.fr</a></p>
 
 <p>Dans l'attente de vous retrouver sur APiLos pour une nouvelle convention, nous restons à votre disposition.</p>
