--- a/templates/settings/edit_administration.html
+++ b/templates/settings/edit_administration.html
@@ -19,9 +19,29 @@
                         {% include "common/form/input_text.html" with form_input=form.code editable=request.user.is_superuser %}
                         {% include "common/form/input_text.html" with form_input=form.ville_signature %}
                         {% include "common/form/input_text.html" with form_input=form.prefix_convention %}
-                        {% include "common/form/input_text.html" with form_input=form.adresse %}
-                        {% include "common/form/input_text.html" with form_input=form.code_postal %}
-                        {% include "common/form/input_text.html" with form_input=form.ville %}
+
+                        {% include "common/form/input_number.html" with display_inline=True form_input=form.nb_convention_exemplaires %}
+
+                        <h4>Adresse à laquelle les conventions doivent-être envoyées</h3>
+                        <span class="fr-hint-text fr-mb-3w">Il est possible de préciser le service dans le champ de l'adresse, par exemple :<br>
+                            <div class="fr-ml-3w">
+                                Service du Conventionnement APL<br>
+                                Délégataire des aides à la Pierre<br>
+                                16 Rue Antoine Zattara<br>
+                                13332 Marseille
+                            </div>
+                        </span>
+                        {% include "common/form/input_textarea.html" with form_input=form.adresse %}
+                        <div class="fr-grid-row fr-grid-row--gutters">
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                {% include "common/form/input_text.html" with form_input=form.code_postal %}
+                            </div>
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                {% include "common/form/input_text.html" with form_input=form.ville %}
+                            </div>
+                        </div>
+
+
 
                         <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
                             Enregistrer
