--- a/templates/emails/bailleur_valide.html
+++ b/templates/emails/bailleur_valide.html
@@ -5,14 +5,26 @@
 <p>Vous pouvez dès maintenant : </p>
 
 <ul>
-    <li>L’imprimer en 3 exemplaires en recto verso (conformément à la Politique d’impression des services de l’Etat).</li>
+    <li>L’imprimer en {{ administration.nb_convention_exemplaires }} exemplaire{{ administration.nb_convention_exemplaires|pluralize }} en recto verso (conformément à la Politique d’impression des services de l’Etat).</li>
     <li>Parapher toutes les pages.</li>
     <li>Signer à la fin de la convention. Attention à ne pas dater.</li>
 </ul>
 
-<p>N'hésitez pas à nous faire part de tout retour ou suggestion d'amélioration sur la plateforme à l'adresse email <a href="mailto:contact@apilos.beta.gouv.fr">contact@apilos.beta.gouv.fr</a></p>
+{% if administration.adresse and administration.code_postal and administration.ville %}
+    <p>Vous pourrez ensuite transmettre les exemplaires signés à votre service instructeur à l‘adresse suivante :</p>
+    <p style="margin-left:40px">
+        {% autoescape on %}
+            {{ administration.adresse | linebreaksbr }}
+        {% endautoescape %}<br>
+        {{ administration.code_postal }} {{ administration.ville }}
+    </p>
+{% else %}
+    <p>Vous pourrez ensuite transmettre les exemplaires signés à votre service instructeur.</p>
+{% endif %}
 
-<p>Dans l'attente de vous retrouver sur APiLos pour une nouvelle convention, nous restons à votre disposition.</p>
+<p>N‘hésitez pas à nous faire part de tout retour ou suggestion d‘amélioration sur la plateforme à l‘adresse email <a href="mailto:contact@apilos.beta.gouv.fr">contact@apilos.beta.gouv.fr</a></p>
+
+<p>Dans l‘attente de vous retrouver sur APiLos pour une nouvelle convention, nous restons à votre disposition.</p>
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><b>L‘équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
