--- a/static/css/main.css
+++ b/static/css/main.css
@@ -247,8 +247,8 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .statcard--color1 .statcard__title {
   border-color: rgba(13, 35, 58, 1)!important;
 }
-#conv_by_departement .highcharts-color-4,
-#conv_by_departement .highcharts-legend-item.highcharts-color-4 .highcharts-point {
+#conv_by_departement .highcharts-color-3,
+#conv_by_departement .highcharts-legend-item.highcharts-color-3 .highcharts-point {
   fill: rgb(255, 111, 76) !important;
 }
 
@@ -262,8 +262,8 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
   border-color: rgba(106, 106, 244, 1)!important;
 }
 
-#conv_by_departement .highcharts-color-3,
-#conv_by_departement .highcharts-legend-item.highcharts-color-3 .highcharts-point {
+#conv_by_departement .highcharts-color-2,
+#conv_by_departement .highcharts-legend-item.highcharts-color-2 .highcharts-point {
   fill: rgb(106, 106, 244) !important;
 }
 
@@ -276,8 +276,8 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .statcard--color3 .statcard__title {
   border-color: rgba(0, 0, 145, 1)!important;
 }
-#conv_by_departement .highcharts-color-2,
-#conv_by_departement .highcharts-legend-item.highcharts-color-2 .highcharts-point {
+#conv_by_departement .highcharts-color-1,
+#conv_by_departement .highcharts-legend-item.highcharts-color-1 .highcharts-point {
   fill: rgb(0, 0, 145) !important;
 }
 
@@ -290,8 +290,8 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .statcard--color4 .statcard__title {
   border-color: rgba(24, 117, 60, 1)!important;
 }
-#conv_by_departement .highcharts-color-1,
-#conv_by_departement .highcharts-legend-item.highcharts-color-1 .highcharts-point {
+#conv_by_departement .highcharts-color-0,
+#conv_by_departement .highcharts-legend-item.highcharts-color-0 .highcharts-point {
   fill: rgb(24, 117, 60) !important;
 }
 
@@ -432,8 +432,27 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
   color: white;
 }
 
+.background-white {
+  background-color: white;
+}
 .background-contrast-grey950 {
   background-color: #EEEEEE;
+}
+
+.background-alt-blue-france {
+  background-color: var(--background-alt-blue-france);
+}
+.border-bottom-default-grey {
+  border-bottom: solid 2px var(--border-default-grey)
+}
+.text-center {
+  text-align: center;
+}
+.text-title-blue-france {
+  color: var(--text-title-blue-france)
+}
+.text-success-main {
+  color: #1f8d49;
 }
 
 /* .background-contrast-grey950:hover {
